    directory named it looks for. This is reportedly needed at least for
    Vista (Boot/BCD vs boot/bcd), and was already done on an ad-hoc basis
    for 2000/XP/NT4.0.
  * Patch from VMiklos to add support for recognising Frugalware.

  [ Frans Pop ]
  * Skip partitions on a physical disk that is part of a Serial ATA RAID disk.
  * Use log-output when checking for volume groups.

  [ Fabio M. Di Nitto ]
  * Skip partitions that have the "whole_disk" sysfs attribute set.
    The kernel set the attribute for partitions like SUN Whole Disk.
    These partitions that encompass the whole disk can be mounted
    and often confused for the first partition on the disk.
    In situations where the OS is on the first partition, it would be
    detected twice in the first and the whole disk partition.

 -- Frans Pop <fjp@debian.org>  Sat, 07 Jul 2007 19:27:45 +0200

os-prober (1.18) unstable; urgency=low

  * Add detection for Dell Utility partition (can be chainloaded).
    Closes: #417279.
  * Remove support for devfs style paths.

 -- Frans Pop <fjp@debian.org>  Sat, 21 Apr 2007 01:11:08 +0200

os-prober (1.17) unstable; urgency=low

  * Check for both upper and lowercase filenames when detecting Windows
    NT/XP/2000. Thanks to Thanatermesis.

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 20:16:49 +0100

os-prober (1.16) unstable; urgency=low

  [ Joey Hess ]
  * Support for recognising Pardus linux.

  [ Frans Pop ]
  * Skip grub entries that have "module" lines as we currently don't support
    those. Based on #399882 where they were used for entries related to Xen.
  * Support for recognizing Kanotix linux.
  * Add support for probing other operating systems on LVM partitions. This
    will only work if LVM support has already been loaded. Closes: #277901.

 -- Frans Pop <fjp@debian.org>  Tue, 20 Feb 2007 12:57:42 +0100

os-prober (1.15) unstable; urgency=low

  [ Colin Watson ]
  * Discard stderr from udevinfo call in parse_proc_mdstat.

  [ Fabio M. Di Nitto ]